# od_training

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  test_config_priority.py
.agent/rules/: ask-questions.md  code-modularity.md  discovery-documentation.md  error-handling.md  plan-documentation.md  progress-documentation.md  read-and-maintain-documentation.md  research-documentation.md
docs/: CLI.md  audit_report.md  discovery.md  plan.md  progress.md  research.md  research_prompts.md  training_research.md
docs/agent/: README.md  context_index.yaml  docs_guide.md  engineering_contract.md  first_task_protocol.md
docs/context/: cross_repo_compatibility_matrix.md  dst_handoff_contract.md  main.md
docs/dev/: audit_report.md  progress.md  research.md  status.md  training_cookbook.md
docs/src/: README.md  __init__.md  cli_utils.md  converters.md  device_utils.md  runtime_config.md
scripts/: augment_data.py  convert_format.py  dataset_manager.py  gen_dummy_data.py  inference.py  odt.py  sync_external_refs.sh  test_export_paths.py  train_rfdetr.py  train_yolo.py  upload_weights.py  verify_env.py  verify_pipeline.sh  view_dataset.py
src/: __init__.py  cli_utils.py  converters.py  device_utils.py  runtime_config.py
src/od_training/: __init__.py
test/: IMPLEMENTATION_PLAN.md  conftest.py
test/integration/: test_dataset_export_smoke.py  test_pipeline_parametrized_one_process.py  test_pipeline_rfdetr_one_process.py  test_pipeline_yolo_one_process.py
test/unit/: test_cli_utils.py  test_config_cli.py  test_convert_format_cli.py  (+11 more)
(+44 files in other folders)
