[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "od-training-tools"
version = "0.1.0"
description = "Object detection training utilities for YOLO and RF-DETR"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OD Training" }]
dependencies = [
  "numpy>=1.23.5,<2.0.0",
  "scipy<1.13.0",
  "pydantic>=1.10,<3.0.0",
  "torch==2.7.1",
  "ultralytics>=8.0",
  "rfdetr[metrics,plus]",
  "pyparsing>=3,<4",
  "roboflow>=1.2.13,<1.3",
  "globox",
  "supervision>=0.18",
  "python-dotenv",
  "clearml>=1.10",
  "fiftyone>=1.11,<2.0",
  "albumentations>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
odt = "od_training.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["od_training*"]
